--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "express": "^5.1.0",
+    "mongodb": "^6.16.0",
     "vue": "^3.5.13"
   },
   "devDependencies": {
